<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="0"
        android:entries="@array/screen_direction_title"
        android:entryValues="@array/screen_direction_value"
        android:key="screenOrientation"
        android:title="@string/screen_direction"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="0"
        android:entries="@array/screen_time_out"
        android:entryValues="@array/screen_time_out_value"
        android:key="keep_light"
        android:title="@string/keep_light"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="hideStatusBar"
        android:title="@string/pt_hide_status_bar"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="hideNavigationBar"
        android:title="@string/pt_hide_navigation_bar"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="readBodyToLh"
        android:title="@string/read_body_to_lh"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="paddingDisplayCutouts"
        android:title="@string/padding_display_cutouts"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="0"
        android:entries="@array/double_page_title"
        android:entryValues="@array/double_page_value"
        android:key="doubleHorizontalPage"
        android:title="@string/double_page_horizontal"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="page"
        android:entries="@array/progress_bar_behavior_title"
        android:entryValues="@array/progress_bar_behavior_value"
        android:key="progressBarBehavior"
        android:title="@string/progress_bar_behavior"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="useZhLayout"
        android:title="@string/use_zh_layout"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="textFullJustify"
        android:title="@string/text_full_justify"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="textBottomJustify"
        android:title="@string/text_bottom_justify"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="mouseWheelPage"
        android:title="@string/mouse_wheel_page"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="volumeKeyPage"
        android:title="@string/volume_key_page"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="volumeKeyPageOnPlay"
        android:title="@string/volume_key_page_on_play"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="keyPageOnLongPress"
        android:title="@string/key_page_on_long_press"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.Preference
        android:key="pageTouchSlop"
        android:summary="@string/page_touch_slop_summary"
        android:title="@string/page_touch_slop_title"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="autoChangeSource"
        android:title="@string/auto_change_source"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="selectText"
        android:title="@string/selectText"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="showBrightnessView"
        android:title="@string/show_brightness_view"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="noAnimScrollPage"
        android:title="@string/no_anim_scroll_page"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="previewImageByClick"
        android:title="@string/preview_image_by_click"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="optimizeRender"
        android:title="@string/enable_optimize_render"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.Preference
        android:key="clickRegionalConfig"
        android:title="@string/click_regional_config"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="disableReturnKey"
        android:title="@string/disable_return_key"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.Preference
        android:key="customPageKey"
        android:title="@string/custom_page_key"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="expandTextMenu"
        android:title="@string/expand_text_menu"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="showReadTitleAddition"
        android:title="@string/show_read_title_addition" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="readBarStyleFollowPage"
        android:title="@string/read_bar_style_follow_page" />

    <!-- AI大模型配置分组 -->
    <androidx.preference.PreferenceCategory
        android:title="@string/ai_model_config"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.NameListPreference
            android:defaultValue="ernie-3.5-8k"
            android:entries="@array/merged_ai_model_entries"
            android:entryValues="@array/merged_ai_model_values"
            android:key="ai_model"
            android:summary="@string/ai_model_summary"
            android:title="@string/ai_model"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true" />

        <io.legado.app.lib.prefs.NameListPreference
            android:defaultValue="api_key"
            android:entries="@array/api_auth_type_entries"
            android:entryValues="@array/api_auth_type_values"
            android:key="ai_auth_type"
            android:summary="@string/ai_auth_type_summary"
            android:title="@string/ai_auth_type"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true" />

        <io.legado.app.lib.prefs.EditTextPreference
            android:key="ai_api_key"
            android:summary="@string/ai_api_key_summary"
            android:title="@string/ai_api_key"
            android:inputType="textPassword"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true" />

        <io.legado.app.lib.prefs.EditTextPreference
            android:key="ai_access_key"
            android:summary="@string/ai_access_key_summary"
            android:title="@string/ai_access_key"
            android:inputType="text"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true" />

        <io.legado.app.lib.prefs.EditTextPreference
            android:key="ai_secret_key"
            android:summary="@string/ai_secret_key_summary"
            android:title="@string/ai_secret_key"
            android:inputType="textPassword"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true" />



        <androidx.preference.SeekBarPreference
            android:defaultValue="30"
            android:key="summary_ratio"
            android:max="100"
            android:min="10"
            android:summary="@string/summary_ratio_summary"
            android:title="@string/summary_ratio"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true"
            app:showSeekBarValue="true" />

        <androidx.preference.SeekBarPreference
            android:defaultValue="7"
            android:key="ai_temperature_int"
            android:max="20"
            android:min="0"
            android:summary="@string/ai_temperature_summary"
            android:title="@string/ai_temperature"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true"
            app:showSeekBarValue="true" />

        <androidx.preference.SeekBarPreference
            android:defaultValue="1000"
            android:key="ai_max_tokens"
            android:max="4000"
            android:min="100"
            android:summary="@string/ai_max_tokens_summary"
            android:title="@string/ai_max_tokens"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true"
            app:showSeekBarValue="true" />

        <androidx.preference.SeekBarPreference
            android:defaultValue="30"
            android:key="ai_timeout"
            android:max="120"
            android:min="10"
            android:summary="@string/ai_timeout_summary"
            android:title="@string/ai_timeout"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true"
            app:showSeekBarValue="true" />

        <io.legado.app.lib.prefs.Preference
            android:key="ai_test_connection"
            android:summary="@string/ai_test_connection_summary"
            android:title="@string/ai_test_connection"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>